# cmake-udemy-course

./: .gitignore
HelloWorld/: CMakeLists.txt  Makefile  lib.cpp  main.cpp
HelloWorld/app/: CMakeLists.txt  main.cpp
HelloWorld/cmake/: Add_Git_SM.cmake  Docs.cmake
HelloWorld/configured/: CMakeLists.txt
HelloWorld/src/: CMakeLists.txt  lib.cpp
